header-image-bottom-gap fixed

--- a/styles/header.css
+++ b/styles/header.css
@@ -4,17 +4,18 @@
   align-items: center;
   gap: 90px;
   padding: 0px 240px;
-  background-color: rgba(229, 84, 115, 0.10);
+  background-color: rgba(229, 84, 115, 0.1);
   background-repeat: no-repeat;
 }
 
-.banner-img-container{
-    margin-top: 50px;
+.banner-img-container {
+  margin-top: 50px;
 }
 
 .banner-img {
   width: 110%;
- 
+  display: flex;
+  align-items: end;
 }
 
 .header-title {
@@ -34,12 +35,12 @@
   margin-bottom: 22px;
 }
 
-.banner-btn{
-padding: 10px 33px;
-border-radius: 8px;
-background: #E55473;
-color: #FFF;
-font-size: 18px;
-font-weight: 600;
-border: 0px;
+.banner-btn {
+  padding: 10px 33px;
+  border-radius: 8px;
+  background: #e55473;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 600;
+  border: 0px;
 }
